add update part

--- a/C#_Cumulative_Part_1/Views/Teacher/Show.cshtml
+++ b/C#_Cumulative_Part_1/Views/Teacher/Show.cshtml
@@ -5,6 +5,7 @@
 
 <a class="navlink" href="/Teacher/List">Back To Teachers</a>
 <a class="dellink" href="/Teacher/DeleteConfirm/@Model.teacherid">Delete</a>
+<a class="navlink" href="/Teacher/Update/@Model.teacherid">Update</a>
 <div id="containershow">
     <style>
         table {
